base/deployment.yaml
apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: portfolio
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: portfolio
    template:
      metadata:
        labels:
          app: portfolio
      spec:
        containers:
        - name: portfolio
          image: image-registry.openshift-image-registry.svc:5000/portfolio/portfolio:latest
          ports:
          - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
