base/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: portfolio
  spec:
    selector:
      app: portfolio
    ports:
    - port: 3000
      targetPort: 3000
