base/route.yaml
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: portfolio
  spec:
    to:
      kind: Service
      name: portfolio
    port:
      targetPort: 3000
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
